// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textDecoration renders 0 1`] = `
Array [
  .c0 {
  -webkit-text-decoration: 0;
  text-decoration: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration: 0;
  text-decoration: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration: 0;
  text-decoration: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration: 0;
  text-decoration: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecoration renders function 1`] = `
Array [
  .c0 {
  -webkit-text-decoration: hasnot;
  text-decoration: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration: has;
  text-decoration: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration: hasnot;
  text-decoration: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration: has;
  text-decoration: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecoration renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-text-decoration: invalid.path.1;
  text-decoration: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration: invalid.path.1;
  text-decoration: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration: invalid.path.1;
  text-decoration: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration: invalid.path.1;
  text-decoration: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecoration renders negative number 1`] = `
Array [
  .c0 {
  -webkit-text-decoration: -54881;
  text-decoration: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration: -54881;
  text-decoration: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration: -42365;
  text-decoration: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration: -42365;
  text-decoration: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecoration renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-text-decoration: July;
  text-decoration: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration: August;
    text-decoration: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration: September;
    text-decoration: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration: November;
    text-decoration: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration: August;
    text-decoration: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration: July;
  text-decoration: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration: August;
    text-decoration: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration: September;
    text-decoration: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration: November;
    text-decoration: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration: August;
    text-decoration: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration: January;
  text-decoration: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration: December;
    text-decoration: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration: April;
    text-decoration: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration: May;
    text-decoration: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration: June;
    text-decoration: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration: January;
  text-decoration: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration: December;
    text-decoration: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration: April;
    text-decoration: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration: May;
    text-decoration: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration: June;
    text-decoration: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textDecoration renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration: July;
    text-decoration: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration: August;
    text-decoration: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration: September;
    text-decoration: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration: November;
    text-decoration: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration: July;
    text-decoration: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration: August;
    text-decoration: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration: September;
    text-decoration: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration: November;
    text-decoration: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration: May;
    text-decoration: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration: June;
    text-decoration: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration: April;
    text-decoration: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration: November;
    text-decoration: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration: May;
    text-decoration: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration: June;
    text-decoration: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration: April;
    text-decoration: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration: November;
    text-decoration: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textDecoration renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-text-decoration: July;
  text-decoration: July;
}

@media May {
  .c0 {
    -webkit-text-decoration: August;
    text-decoration: August;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration: September;
    text-decoration: September;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration: November;
    text-decoration: November;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration: August;
    text-decoration: August;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration: November;
    text-decoration: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration: July;
  text-decoration: July;
}

@media May {
  .c0 {
    -webkit-text-decoration: August;
    text-decoration: August;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration: September;
    text-decoration: September;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration: November;
    text-decoration: November;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration: August;
    text-decoration: August;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration: November;
    text-decoration: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration: April;
  text-decoration: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-text-decoration: November;
    text-decoration: November;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration: January;
    text-decoration: January;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration: December;
    text-decoration: December;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration: April;
    text-decoration: April;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration: May;
    text-decoration: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration: April;
  text-decoration: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-text-decoration: November;
    text-decoration: November;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration: January;
    text-decoration: January;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration: December;
    text-decoration: December;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration: April;
    text-decoration: April;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration: May;
    text-decoration: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textDecoration renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-text-decoration: July;
    text-decoration: July;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration: August;
    text-decoration: August;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration: September;
    text-decoration: September;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration: November;
    text-decoration: November;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration: August;
    text-decoration: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-text-decoration: July;
    text-decoration: July;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration: August;
    text-decoration: August;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration: September;
    text-decoration: September;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration: November;
    text-decoration: November;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration: August;
    text-decoration: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-text-decoration: January;
    text-decoration: January;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration: December;
    text-decoration: December;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration: April;
    text-decoration: April;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration: May;
    text-decoration: May;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration: June;
    text-decoration: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-text-decoration: January;
    text-decoration: January;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration: December;
    text-decoration: December;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration: April;
    text-decoration: April;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration: May;
    text-decoration: May;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration: June;
    text-decoration: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textDecoration renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-text-decoration: 54881;
  text-decoration: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration: 54881;
  text-decoration: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration: 42365;
  text-decoration: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration: 42365;
  text-decoration: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecoration renders string 1`] = `
Array [
  .c0 {
  -webkit-text-decoration: July;
  text-decoration: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration: July;
  text-decoration: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration: June;
  text-decoration: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration: June;
  text-decoration: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecoration renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`textDecoration renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-text-decoration: DarkSlateBlue;
  text-decoration: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration: DarkSlateBlue;
  text-decoration: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration: DarkSlateBlue;
  text-decoration: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration: DarkSlateBlue;
  text-decoration: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
